# wm_trajectory_manager

./: CMakeLists.txt  package.xml
launch/: trajectory_manager.launch
src/: wm_trajectory_manager_node.py
srv/: save_trajectory.srv
